CAY-2784 Remove 'Use Java primitive types' option from dbimport
CAY-2785 Modeler: improve folder selection for cgen
CAY-2788 DbImport: Add fallback option for the batch attribute loader
CAY-2795 Add unit tests for the Json type
CAY-2802 Upgrade Gradle to 7.6.1
CAY-2803 Test infrastructure: declarative custom DI modules in ServerCase
CAY-2805 Stop calling exp parser internally
CAY-2814 Select query iterator() and batchIterator() methods return incorrect results
CAY-2817 Pagination flow refactoring
CAY-2818 JDK 21 support
CAY-2819 DataContext.performIteratedQuery() method should be unified with iterator() method
CAY-2820 Remove `server` from the components naming
CAY-2821 Change development versioning schema
CAY-2822 Rename `cayenne-server` module to `cayenne`
CAY-2823 Merge `ServerRuntime` back to `CayenneRuntime` and deprecate it
CAY-2824 Rename CayenneServerModuleProvider to CayenneRuntimeModuleProvider
CAY-2825 Rename package `o.a.c.configuration.server` to `o.a.c.configuration.runtime`
CAY-2826 Rename `ServerModule` to `CoreModule`
CAY-2828 Rename values in `org.apache.cayenne.configuration.Constants`
CAY-2829 Merge `BaseContext` with `DataContext` and deprecate it
CAY-2830 Cleanup `DataContext` code
CAY-2831 Upgrade Gradle to 8.5
CAY-2833 Unify code related to the Cayenne model paths processing
CAY-2834 v11 upgrade handler should update XMLPoolingDataSourceFactory package
CAY-2835 Custom aggregate functions
CAY-2837 Deprecate TraversalHelper and move no-op implementations to TraversalHandler
CAY-2843 Use an IN clause for single field disjoint by ID prefetches
CAY-2845 Deprecate DataObject in favour of Persistent
CAY-2849 Switch documentation to `hugo-asciidoctorj-extension`
CAY-2856 Upgrade Gradle to 8.8
CAY-2857 Java 22 support

Bug Fixes:

CAY-2552 ColumnQuery with flattened attributes bug
CAY-2621 Modeler: project is dirty after a no-change db import
CAY-2732 Exception when creating ObjEntity from a DbEntity